--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,5 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/socialju/public_html/
-    -/bin/cp * $DEPLOYPATH
+    - /bin/cp -r * $DEPLOYPATH
   
