--- a/.htaccess
+++ b/.htaccess
@@ -19,17 +19,18 @@ RewriteRule . index.php [L,QSA]
 
 # BEGIN Expire headers
 <ifModule mod_expires.c>
-  ExpiresActive On
+  ExpiresActive Off
+  
   ExpiresDefault "access plus 5 seconds"
   ExpiresByType image/x-icon "access plus 31536000 seconds"
   ExpiresByType image/jpeg "access plus 31536000 seconds"
   ExpiresByType image/png "access plus 31536000 seconds"
   ExpiresByType image/gif "access plus 31536000 seconds"
   ExpiresByType application/x-shockwave-flash "access plus 31536000 seconds"
-  ExpiresByType text/css "access plus 3 seconds"
-  ExpiresByType text/javascript "access plus 3 seconds"
-  ExpiresByType application/javascript "access plus 3 seconds"
-  ExpiresByType application/x-javascript "access plus 3 seconds"
+  ExpiresByType text/css "access plus 31536000 seconds"
+  ExpiresByType text/javascript "access plus 31536000 seconds"
+  ExpiresByType application/javascript "access plus 31536000 seconds"
+  ExpiresByType application/x-javascript "access plus 31536000 seconds"
 </ifModule>
 # END Expire headers
 
@@ -42,8 +43,9 @@ RewriteRule . index.php [L,QSA]
     Header set Cache-Control "public"
   </filesMatch>
   <filesMatch ".(js)$">
-    Header set Cache-Control "no-cache, no-store, must-revalidate"
-  </filesMatch>
+Header set Cache-Control "no-cache, no-store, must-revalidate"
+    Header set Pragma "no-cache"
+    Header set Expires 0  </filesMatch>
   <filesMatch ".(x?html?|php)$">
     Header set Cache-Control "private, must-revalidate"
   </filesMatch>
